[package]
name = "dahl-salso"
version = "0.5.3"
authors = ["David B. Dahl <dahl@stat.byu.edu>"]
edition = "2018"
description = "The SALSO algorithm is an efficient greedy search procedure to obtain a clustering estimate based on a partition loss function. The algorithm is implemented for many loss functions, including the Binder loss and a generalization of the variation of information loss, both of which allow for unequal weights on the two types of clustering mistakes. Efficient implementations are also provided for Monte Carlo estimation of the posterior expected loss of a given clustering estimate. SALSO was first presented at the workshop 'Bayesian Nonparametric Inference: Dependence Structures and their Applications' in Oaxaca, Mexico on December 6, 2017."
homepage = "https://dahl.byu.edu"
license = "MIT OR Apache-2.0"

[dependencies]

# dahl-partition = "0.5.1"
dahl-partition = { git="https://dahl-git.byu.edu/dahl/rust-dahl-partition.git" }
# dahl-partition = { path="/home/dahl/docs/devel/rust-dahl-partition" }

# dahl-roxido = "0.2.0"
dahl-roxido = { git="https://dahl-git.byu.edu/dahl/rust-dahl-roxido.git" }
# dahl-roxido = { path="/home/dahl/docs/devel/rust-dahl-roxido" }

rand = "0.8.3"
rand_isaac = "0.3.0"
crossbeam = "0.8.0"
ndarray = "0.14.0"
num_cpus = "1.13.0"
approx = "0.4.0"
