[package]
name = "dahl-salso"
version = "0.6.7"
authors = ["David B. Dahl <dahl@stat.byu.edu>"]
edition = "2024"
description = "The SALSO algorithm is an efficient greedy search procedure to obtain a clustering estimate based on a partition loss function. The algorithm is implemented for many loss functions, including the Binder loss and a generalization of the variation of information loss, both of which allow for unequal weights on the two types of clustering mistakes. Efficient implementations are also provided for Monte Carlo estimation of the posterior expected loss of a given clustering estimate. SALSO was first presented at the workshop 'Bayesian Nonparametric Inference: Dependence Structures and their Applications' in Oaxaca, Mexico on December 6, 2017."
homepage = "https://dahl.byu.edu"
license = "MIT OR Apache-2.0"
rust-version = "1.88"

[dependencies]

# dahl-partition = "0.5.3"
dahl-partition = { git="https://github.com/dbdahl/rust-dahl-partition.git", rev="c3a9894b198" }
# dahl-partition = { path="/home/dahl/docs/devel/rust-dahl-partition" }

rand = "0.10.0"
rand_pcg = "0.10.0"
crossbeam = "0.8.0"
ndarray = "0.17.0"
approx = "0.5.0"
